@@ -48,8 +48,8 @@ then
 fi
  
 # Allow alternate conf dir location.
-if [ -e "${HCAT_PREFIX}/conf/hcat-env.sh" ]; then
-  DEFAULT_CONF_DIR=${HCAT_PREFIX}/"conf"
+if [ -e "${HCAT_PREFIX}/etc/hcatalog/hcat-env.sh" ]; then
+  DEFAULT_CONF_DIR=${HCAT_PREFIX}/"etc/hcatalog"
 else
   DEFAULT_CONF_DIR="/etc/hcatalog"
 fi
