@@ -23,7 +23,7 @@ $cfg = {
 				,'hadoop' => q\
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.SimpleRead -libjars :HCAT_JAR: :THRIFTSERVER: studenttab10k :OUTPATH:
 \,
-                                ,'sql' => q\select name, gpa from studenttab10k;\
+                                ,'sql' => q\select name, age from studenttab10k;\
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
 				}, 
@@ -42,15 +42,46 @@ jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.ReadWrite -libjars :HCAT_JA
                                 {
                                  'num' => 3
                                 ,'hcat_prep'=>q\drop table if exists hadoop_checkin_3;
-create table hadoop_checkin_3 (name string, cnt int) STORED AS TEXTFILE;\
+create table hadoop_checkin_3 (age int, cnt int) STORED AS TEXTFILE;\
                                 ,'hadoop' => q\
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.GroupByAge -libjars :HCAT_JAR: :THRIFTSERVER: studenttab10k hadoop_checkin_3
 \,
                                 ,'result_table' => 'hadoop_checkin_3'
                                 ,'sql' => q\select age, count(*) from studenttab10k group by age;\
+                                },{
+                                 # Read from a partitioned table
+                                 'num' => 4
+                                ,'hadoop' => q\
+jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.SimpleRead -libjars :HCAT_JAR: :THRIFTSERVER: studentparttab30k :OUTPATH:
+\,
+                                ,'sql' => q\select name, age from studentparttab30k;\
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
-                                },
+                                },{
+                                 # Write a single partition to a partitioned table
+                                 'num' => 5
+                                ,'hcat_prep'=>q\drop table if exists hadoop_checkin_5;
+create table hadoop_checkin_5 (name string, age int) partitioned by (ds string) STORED AS TEXTFILE;\
+                                ,'hadoop' => q?
+jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteTextPartitioned -libjars :HCAT_JAR: :THRIFTSERVER: studentparttab30k hadoop_checkin_5 ds=\"20110924\"
+?,
+                                ,'result_table' => 'hadoop_checkin_5'
+                                ,'sql' => q\select name, age, ds from studentparttab30k where ds='20110924';\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                }, {
+                                 # Write a multiple partitions to a partitioned table
+                                 'num' => 6
+                                ,'hcat_prep'=>q\drop table if exists hadoop_checkin_6;
+create table hadoop_checkin_6 (name string, age int) partitioned by (ds string) STORED AS TEXTFILE;\
+                                ,'hadoop' => q\
+jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteTextPartitioned -libjars :HCAT_JAR: :THRIFTSERVER: studentparttab30k hadoop_checkin_6
+\,
+                                ,'result_table' => 'hadoop_checkin_6'
+                                ,'sql' => q\select name, age, ds from studentparttab30k;\
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+                                }
 			],
  		}, # end g
                 {
@@ -122,10 +153,8 @@ create table hadoop_write_2(
             d double,
             m map<string, string>,
             bb array<struct<a: int, b: string>>)
-            STORED AS INPUTFORMAT 'org.apache.hadoop.mapred.TextInputFormat' OUTPUTFORMAT 'org.apache.hadoop.hive.ql.io.IgnoreKeyTextOutputFormat'
-            INPUTDRIVER 'org.apache.hcatalog.pig.drivers.LoadFuncBasedInputDriver' OUTPUTDRIVER 'org.apache.hcatalog.pig.drivers.StoreFuncBasedOutputDriver'
-            TBLPROPERTIES ('hcat.pig.loader'='org.apache.pig.builtin.JsonLoader', 'hcat.pig.storer'='org.apache.pig.builtin.JsonStorage', 'hcat.pig.loader.args'=
-'s:chararray, i:int, d:double, m:map[chararray], bb:{t:(a:int, b:chararray)}', 'hcat.pig.args.delimiter'='	');\
+            row format serde 'org/apache/hcatalog/data/JsonSerDe'
+            stored as textfile;\
                                 ,'hadoop' => q\
 jar :FUNCPATH:/testudf.jar org.apache.hcatalog.utils.WriteJson -libjars :HCAT_JAR: :THRIFTSERVER: all100kjson hadoop_write_2
 \,
