@@ -130,7 +130,7 @@ show databases;\
                                 ,'hcat' => q\
 show tables;\,
                                 ,'rc'   => 0
-                                ,'expected_out_regex' => 'studenttab10k'
+                                ,'expected_out_regex' => 'hcat_createtable_1'
                                 },
                         ],
                 }, # end g
