@@ -77,7 +77,33 @@ store c into ':OUTPATH:';\,
 				,'sql'   => [ 'select * from studenttab10k where age<=40;', 'select * from studenttab10k where age>40;']
                                 ,'floatpostprocess' => 1
                                 ,'delimiter' => '	'
-				}, 
+				},
+                {
+				 'num' => 6
+                                ,'hcat_prep'=>q\drop table if exists pig_checkin_6;
+create table pig_checkin_6 (name string, age int) partitioned by (ds string) STORED AS TEXTFILE;\
+                                ,'pig' => q\a = load 'studentparttab30k' using org.apache.hcatalog.pig.HCatLoader();
+b = filter a by ds == '20110924';
+c = foreach b generate name, age;
+store c into 'pig_checkin_6' using org.apache.hcatalog.pig.HCatStorer('ds=20110924');\,
+#dump a;\,
+                                ,'result_table' => 'pig_checkin_6',
+				,'sql'   => "select name, age, ds from studentparttab30k where ds='20110924';",
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+				},
+                {
+				 'num' => 7
+                                ,'hcat_prep'=>q\drop table if exists pig_checkin_7;
+create table pig_checkin_7 (name string, age int) partitioned by (ds string) STORED AS TEXTFILE;\
+                                ,'pig' => q\a = load 'studentparttab30k' using org.apache.hcatalog.pig.HCatLoader();
+b = foreach a generate name, age, ds;
+store b into 'pig_checkin_7' using org.apache.hcatalog.pig.HCatStorer();\,
+                                ,'result_table' => 'pig_checkin_7',
+				,'sql'   => "select name, age, ds from studentparttab30k;",
+                                ,'floatpostprocess' => 1
+                                ,'delimiter' => '	'
+				} 
 
 			],
  		}, # end g
