@@ -50,6 +50,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-257 e2e harness not working properly after file location change (gates)
+
   HCAT-270 HCatRecord SerDe does not handle List<Map> or List<List> or List<lazy primitive> correctly (khorgath via gates)
 
   HCAT-248 Set execute.setugi conf variable to true by default (hashutosh via gates)
